# GL_Projects

Breakout/: CMakeLists.txt
Breakout/include/: game.h  library.hpp  resource_manager.h  shader.h  sprite_renderer.h  texture.h
Breakout/shaders/: sprite.vs
Breakout/src/: game.cpp  glad.c  main.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp
Breakout_Origin/: CMakeLists.txt
Breakout_Origin/src/: game.cpp
Lecture03/: CMakeLists.txt
Lecture03/src/: library.cpp  main.cpp
Lecture06/: CMakeLists.txt
Lecture06/include/: library.hpp  shaderprogram.hpp
Lecture06/shaders/: simplevs.glsl
Lecture06/src/: main.cpp  shaderprogram.cpp
Lecture11/: CMakeLists.txt
Lecture11/include/: shaderprogram.hpp
Lecture11/shaders/: simplefs.glsl  simplevs.glsl
Lecture11/src/: main.cpp  shaderprogram.cpp
Lecture12/: CMakeLists.txt
Lecture13/: CMakeLists.txt
Lecture14/: CMakeLists.txt
buildBreakout/: Breakout  CMakeCache.txt  Makefile  cmake_install.cmake
buildBreakoutOrigin/: CMakeCache.txt  Makefile  cmake_install.cmake
buildLecture04/: CMakeCache.txt  Makefile  OpenGLLecture04  cmake_install.cmake
buildLecture06/: CMakeCache.txt  Makefile  OpenGLLecture06  cmake_install.cmake
buildLecture11/: CMakeCache.txt  Lecture11  Makefile  OpenGLLecture11  cmake_install.cmake
buildLecture12/: CMakeCache.txt  Makefile  OpenGLLecture12  cmake_install.cmake
buildLecture13/: CMakeCache.txt  Makefile  OpenGLLecture13  cmake_install.cmake
buildLecture14/: CMakeCache.txt  Makefile  OpenGLLecture13  OpenGLLecture14  cmake_install.cmake
(+12 files in other folders)
